name:             pyli
version:          0.1
build-type:       Simple
cabal-version:    >= 1.2

library
  hs-source-dirs: src
  build-depends:  base == 4.5.*, HUnit, derp == 0.1.1, containers

-- The compiler binary
executable        pyli
  main-is:        Pyle.hs
  hs-source-dirs: src
  ghc-options:    -Wall

-- The lexer binary
executable        pyle
  main-is:        Pyle.hs
  hs-source-dirs: src
  ghc-options:    -Wall

